feat(santa): translate in french

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <link rel="stylesheet" href="/splash.css" />
     <link rel="stylesheet" href="/style.css" />
-    <title>Simple Secret Santa</title>
+    <title>Secret Santa</title>
   </head>
   <body>
     <section id="loading-screen">
